# BlueBoat_MPC

./: .dockerignore  .gitignore  Dockerfile  README.md  acados_settings.py  animate.py  animate_vessel.py  around_frimerket.csv  complete_turning_test.csv  cross_track_calc.py  docker-compose.yml  forward_test_new.csv  forward_test_nyhavna.csv  guidance.py  guidance2.py  guidance3.py  left_turning_test.csv  lidar_simulator.py  main.py  mpc.py  nmpc.py  parameters.json  plot_vessel.py  plotting.py  right_turning_right.csv  run.py  test.py  test3.py  test_wp_selector.py  vessel_model.py  waypoints.txt
ros2_ws/: .gitignore
ros2_ws/src/NED_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py  waypoint_service_node.py
ros2_ws/src/blueboat_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/blueboat_interfaces/msg/: BlueBoatActuatorInputs.msg  BlueBoatState.msg
ros2_ws/src/vessel_control/: package.xml  setup.py
ros2_ws/src/vessel_control/vessel_control/: acados_settings.py  animate_vessel.py  lidar_simulator.py  nmpc_node.py  plotting.py  vessel_model.py
ros2_ws/src/waypoint_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/waypoint_interfaces/msg/: Waypoint.msg
ros2_ws/src/waypoint_interfaces/srv/: SetWaypoints.srv
ros2_ws/src/waypoint_service/: package.xml  setup.cfg  setup.py
ros2_ws/src/waypoint_service/data/: waypoints.csv
ros2_ws/src/waypoint_service/waypoint_service/: waypoint_service_node.py
