<?xml version="1.0"?>
<package format="3">
  <name>waypoint_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces for waypoint processing.</description>

  <maintainer email="henrik@example.com">Henrik</maintainer>
  <license>Apache-2.0</license>

   <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build-time dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Mark this as a ROS 2 interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
